cmake_minimum_required(VERSION 2.8.11)

project( MvpPlayerQt CXX )

# Set sequenceParser versions
set( MVPPLAYERQT_VERSION_MAJOR "1" )
set( MVPPLAYERQT_VERSION_MINOR "0" )
set( MVPPLAYERQT_VERSION_MICRO "0" )
set( MVPPLAYERQT_VERSION ${MVPPLAYERQT_VERSION_MAJOR}.${MVPPLAYERQT_VERSION_MINOR}.${MVPPLAYERQT_VERSION_MICRO} )

# Define sequenceParser versions
add_definitions( -DMVPPLAYERQT_VERSION_MAJOR=${MVPPLAYERQT_VERSION_MAJOR} )
add_definitions( -DMVPPLAYERQT_VERSION_MINOR=${MVPPLAYERQT_VERSION_MINOR} )
add_definitions( -DMVPPLAYERQT_VERSION_MICRO=${MVPPLAYERQT_VERSION_MICRO} )
add_definitions( -DMVPPLAYERQT_STATIC_BUILD )

# Diplay commands being ran by CMake
set( CMAKE_VERBOSE_MAKEFILE OFF )

# CPP flags on debug / release mode
if( MSVC )
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
else()
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3")
endif()

add_subdirectory(src)
