cmake_minimum_required(VERSION 2.8) 

project(MvpPlayerCore CXX)

# Set sequenceParser versions
set(MVP_PLAYER_CORE_VERSION_MAJOR "1")
set(MVP_PLAYER_CORE_VERSION_MINOR "0")
set(MVP_PLAYER_CORE_VERSION_MICRO "0")
set(MVP_PLAYER_CORE_VERSION ${MVP_PLAYER_CORE_VERSION_MAJOR}.${MVP_PLAYER_CORE_VERSION_MINOR}.${MVP_PLAYER_CORE_VERSION_MICRO})

# Define sequenceParser versions
add_definitions(-DMVP_PLAYER_CORE_VERSION_MAJOR=${MVP_PLAYER_CORE_VERSION_MAJOR})
add_definitions(-DMVP_PLAYER_CORE_VERSION_MINOR=${MVP_PLAYER_CORE_VERSION_MINOR})
add_definitions(-DMVP_PLAYER_CORE_VERSION_MICRO=${MVP_PLAYER_CORE_VERSION_MICRO})

# CPP flags on debug / release mode
if(MSVC)
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
else()
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3")
endif()

add_subdirectory(src)
